force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/What_describes_your_connection_to_CCA__c.field-meta.xml
<CustomField>
    <fullName>What_describes_your_connection_to_CCA__c</fullName>
    <label>What describes your connection to CCA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEIU-ULTCW / Local 2015 Flyer</fullName>
            </value>
            <value>
                <fullName>CUHW</fullName>
            </value>
            <value>
                <fullName>Ticket-To-Work</fullName>
            </value>
            <value>
                <fullName>EDD/WorkSource</fullName>
            </value>
            <value>
                <fullName>HealthNet Health Plan</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Other Health Plan</fullName>
            </value>
            <value>
                <fullName>LA County Provider</fullName>
            </value>
            <value>
                <fullName>Contra Costa County Provider</fullName>
            </value>
            <value>
                <fullName>San Mateo County Provider</fullName>
            </value>
            <value>
                <fullName>SEIU-UHW</fullName>
            </value>
            <value>
                <fullName>ULTCW Other</fullName>
            </value>
            <value>
                <fullName>LA Care Health Plan</fullName>
            </value>
            <value>
                <fullName>Contra Costa County Consumer</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>