force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/What_is_the_ailment__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_ailment__c</fullName>
    <description>Ailment details from the seekers</description>
    <label>What is the ailment?</label>
    <type>TextArea</type>
</CustomField>