force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Would_it_be_hard_to_attend_a_3_5__c.field-meta.xml
<CustomField>
    <fullName>Would_it_be_hard_to_attend_a_3_5__c</fullName>
    <description>Would it be hard for you to attend a 3.5-hour training, with one 15 minute break?</description>
    <label>Would it be hard to attend 3.5 training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>