force-app/main/default/objects/Home_Care_Seeker_Consumer__c/validationRules/Not_Qualified_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Qualified_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Recruitment_Status__c, &apos;Not Qualified&apos;)  &amp;&amp;   ISBLANK(Not_Qualified_Reason__c)</errorConditionFormula>
    <errorDisplayField>Not_Qualified_Reason__c</errorDisplayField>
    <errorMessage>Please populate the &apos;Not Qualified&apos; reason</errorMessage>
</ValidationRule>