force-app/main/default/objects/Home_Care_Seeker_Consumer__c/listViews/Demo_Consumer_List.listView-meta.xml
<ListView>
    <fullName>Demo_Consumer_List</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Gender__c</columns>
    <columns>Qualification_Type__c</columns>
    <columns>What_is_the_ailment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Demo Consumer List</label>
</ListView>